Bug 1514112 - Listen for font setting changes even if DWrite is not used. r=jrmuizel, a=RyanVM